--- a/src/conf_world/pubspec.yaml
+++ b/src/conf_world/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: 0.8.2
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
