--- a/src/conf_world/pubspec.yaml
+++ b/src/conf_world/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   flutter_map: 0.8.2
   url_launcher:
-
+  sqflite: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
