--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -52,4 +52,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: apk
-          path: build/app/outputs/apk/release/app-release.apk
+          path: ./src/conf_world/build/app/outputs/apk/release/app-release.apk
