--- a/src/conf_world/pubspec.yaml
+++ b/src/conf_world/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_gherkin: ^1.1.9
 
 dev_dependencies:
   flutter_test:
