--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   flutter_test:
-    name: Run flutter test and analyze
+    name: Run flutter test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -30,6 +30,24 @@ jobs:
       - name: flutter test
         working-directory: ./src/conf_world
         run: flutter test
+
+  flutter_gherkin_test:
+    name: Run flutter gherkin tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - name: flutter pub get
+        working-directory: ./src/conf_world
+        run: flutter pub get
+      - name: flutter gherkin tests
+        working-directory: ./src/conf_world
+        run: dart test_driver/app_test.dart
   
   flutter_apk:
     name: Get Flutter APK
