--- a/src/conf_world/pubspec.yaml
+++ b/src/conf_world/pubspec.yaml
@@ -48,6 +48,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/conferences.json
+     - assets/img/calendar.png
+     - assets/img/icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
