--- a/src/conf_world/pubspec.yaml
+++ b/src/conf_world/pubspec.yaml
@@ -26,10 +26,16 @@ dependencies:
   flutter_map: 0.8.2
   url_launcher:
   sqflite: ^1.2.0
-
+  flutter_launcher_icons: "^0.8.0"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/icon.png"
+
 
 dev_dependencies:
   flutter_test:
