--- a/src/conf_world/pubspec.yaml
+++ b/src/conf_world/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
      - assets/conferences.json
      - assets/img/calendar.png
      - assets/img/icon.png
+     - assets/img/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
