--- a/src/conf_world/pubspec.yaml
+++ b/src/conf_world/pubspec.yaml
@@ -25,17 +25,21 @@ dependencies:
     sdk: flutter
   flutter_map: 0.8.2
   url_launcher:
-  flutter_gherkin: ^1.0.5
-
-
+  sqflite: ^1.2.0
+  flutter_launcher_icons: "^0.8.0"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_gherkin: ^1.1.9
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/icon.png"
+
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  flutter_driver:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
@@ -43,7 +47,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -51,10 +54,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/conferences.json
-     - assets/img/calendar.png
-     - assets/img/icon.png
-     - assets/img/logo.png
+    - assets/conferences.json
+    - assets/img/calendar.png
+    - assets/img/icon.png
+    - assets/img/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
